--- a/Wireframe/0_Homepage/Homepage.html
+++ b/Wireframe/0_Homepage/Homepage.html
@@ -80,7 +80,7 @@
 
     <div id="containerFunfact">
         <div>
-            <p id="funfact">Fun Fact</p>
+            <p id="funfact">Wiki</p>
             <a class="funfactLinks" href="">What is Learnersourcing?</a><br>
             <a class="funfactLinks" href="">What is a worked-out example?</a><br>
         </div>
@@ -92,7 +92,7 @@
 </div>
 
 <div class="containerBody">
-    <div class="containerButtons" id="create">
+    <div class="containerButtons" id="create" >
         <p class="bodyHeader">Ready to Create?</p>
         <p class="bodyDescription">Create or Finish Your Worked-Out Examples</p>
     </div>
@@ -110,35 +110,6 @@
     </div>
 </div>
 
-<script src="/Main.js"></script>
-<script>
-    function openForm1() {
-        document.getElementById("loginForm").style.display = "block";
-    }
-
-    function closeForm1() {
-        document.getElementById("loginForm").style.display = "none";
-    }
-
-    function openForm2() {
-        document.getElementById("signupForm").style.display = "block";
-    }
-
-    function closeForm2() {
-        document.getElementById("signupForm").style.display = "none";
-    }
-    document.getElementById("create").addEventListener("click", function(){
-        window.location.href = '../Be an Expert/Be an Expert.html';
-    });
-
-    document.getElementById("review").addEventListener("click", function(){
-        window.location.href = '../review.html';
-    });
-
-    document.getElementById("challenge").addEventListener("click", function(){
-        window.location.href = '../Be an Explorer/Be an Explorer.html';
-    });
-
-</script>
+<script src="../../Javascript/Main.js"></script>
 </body>
 </html>
