--- a/Wireframe/1_Create/CreateOverview.html
+++ b/Wireframe/1_Create/CreateOverview.html
@@ -3,35 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Be an Expert</title>
-    <link href="../Homepage/Main.css" rel="stylesheet">
+    <link href="../0_Homepage/Main.css" rel="stylesheet">
     <script src="../Main.js"></script>
 </head>
+
 <body>
 <div class="containerHeader">
     <div>
-        <img alt="Purdue Logo" id="PurdueLogo" src="/Images/Purdue_logo.png">
+        <img alt="Purdue Logo" id="PurdueLogo" src="../Images/Purdue_logo.png">
     </div>
     <div>
-        <p id="header">Hey FirstName, show your expertise to this world!</p>
+        <p id="header">Hey FirstName, your peers value your suggestions!</p>
     </div>
     <div>
-        <img alt="Hamburger Sign" id="HamburgerSign" src="/Images/hamburger.png">
+        <img alt="Hamburger Sign" id="HamburgerSign" src="../Images/hamburger.png">
     </div>
 
 </div>
-<div class="header-section">
+
+
+<div class="containerNav">
     <nav class="navigation">
-        <a href="../Homepage/Homepage.html">Home</a> ›
-        <a>Be an Expert</a>
+        <a href="../0_Homepage/Homepage.html">Home</a> ›
+        <a>Ready to Create?</a>
     </nav>
-    <p class="welcome">FirstName, your peers value your suggestions!</p>
 </div>
+
 <div>
     <H2>New Worked-Out Examples:</H2>
     <p>Have some new ideas on how newly learned knowledge could be applied into real-world scenarios? Click the button
         below to create it!</p>
-    <button class="new-example" onclick="window.location.href = '../Create a new worked-out example/Create a new worked-out example.html'">Create New Worked-Out Example</button>
+    <button class="new-example" onclick="window.location.href = '../1_Create/CreateProcess.html'">Create New Worked-Out Example</button>
 </div>
+
 <i class="fa-regular fa-circle-info"></i>
 <div>
     <h2>The Worked-Out Examples in Progress:</h2>
@@ -86,6 +90,7 @@
     <a href="#">3</a><span>, </span>
     <a href="#">4</a><span>, </span>
 </div>
+
 <div>
     <h2>Completed Worked-Out Examples:</h2>
     <table class="table-style">
